--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "airtable": "^0.11.0",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
