--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "airtable": "^0.11.0",
+    "crypto": "^1.0.1",
+    "joi": "^17.4.0",
     "next": "10.1.3",
+    "next-auth": "^3.17.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.2.3",
