--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^3.17.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.32.11",
     "styled-components": "^5.2.3",
     "swr": "^0.5.5"
   },
