--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "airtable": "^0.11.0",
+    "cloudinary": "^1.25.1",
     "crypto": "^1.0.1",
     "joi": "^17.4.0",
     "next": "10.1.3",
