--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@stripe/stripe-js": "^1.14.0",
     "airtable": "^0.11.0",
     "cloudinary": "^1.25.1",
     "crypto": "^1.0.1",
@@ -19,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.32.11",
+    "stripe": "^8.148.0",
     "styled-components": "^5.2.3",
     "swr": "^0.5.5"
   },
